--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@formatjs/intl-pluralrules": "^3.2.5",
     "@formatjs/intl-relativetimeformat": "^7.0.0",
     "@ionic/cli": "^6.11.11",
-    "digiasset-cryptofont": "2.3.0",
     "@sentry/browser": "^5.17.0",
     "@types/compression-webpack-plugin": "^2.0.1",
     "@types/react-select": "^3.1.2",
@@ -22,6 +21,7 @@
     "bitcoincashjs": "0.1.10",
     "bootstrap": "^4.3.1",
     "compression-webpack-plugin": "^3.0.1",
+    "digiasset-cryptofont": "2.3.0",
     "history": "^4.7.2",
     "http-signature": "^1.3.5",
     "i18n-iso-countries": "^3.7.8",
@@ -87,7 +87,6 @@
     "analyze": "source-map-explorer build/static/js/main.*"
   },
   "devDependencies": {
-    "digiassetindo-coding-standards": "2.3.0",
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.13",
@@ -113,12 +112,13 @@
     "cryptocurrency-icons": "^0.16.1",
     "cssnano": "^4.0.5",
     "cypress": "^3.1.5",
+    "digiassetindo-coding-standards": "2.3.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "enzyme-to-json": "^3.3.4",
     "file-loader": "^1.1.11",
     "header-case-normalizer": "1.0.3",
-    "husky": "^1.0.0-rc.13",
+    "husky": "6",
     "isomorphic-ws": "^4.0.1",
     "jest": "24.9.0",
     "js-combinatorics": "0.5.0",
