--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "redux-mock-store": "^1.5.3",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^1.7.0",
+    "tailwindcss": "^3.1.8",
     "ts-jest": "^23.1.3",
     "ts-node": "^7.0.1",
     "tslint-plugin-prettier": "^2.3.0",
